/*
 * Copyright (C) 2017 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto2";
option optimize_for = LITE_RUNTIME;

import "perfetto/trace/ftrace/binder_lock.proto";
import "perfetto/trace/ftrace/binder_locked.proto";
import "perfetto/trace/ftrace/binder_set_priority.proto";
import "perfetto/trace/ftrace/binder_transaction.proto";
import "perfetto/trace/ftrace/binder_transaction_received.proto";
import "perfetto/trace/ftrace/binder_unlock.proto";
import "perfetto/trace/ftrace/block_rq_issue.proto";
import "perfetto/trace/ftrace/cgroup_attach_task.proto";
import "perfetto/trace/ftrace/cgroup_destroy_root.proto";
import "perfetto/trace/ftrace/cgroup_mkdir.proto";
import "perfetto/trace/ftrace/cgroup_release.proto";
import "perfetto/trace/ftrace/cgroup_remount.proto";
import "perfetto/trace/ftrace/cgroup_rename.proto";
import "perfetto/trace/ftrace/cgroup_rmdir.proto";
import "perfetto/trace/ftrace/cgroup_setup_root.proto";
import "perfetto/trace/ftrace/cgroup_transfer_tasks.proto";
import "perfetto/trace/ftrace/clock_disable.proto";
import "perfetto/trace/ftrace/clock_enable.proto";
import "perfetto/trace/ftrace/clock_set_rate.proto";
import "perfetto/trace/ftrace/cpu_frequency.proto";
import "perfetto/trace/ftrace/cpu_frequency_limits.proto";
import "perfetto/trace/ftrace/cpu_idle.proto";
import "perfetto/trace/ftrace/cpufreq_interactive_already.proto";
import "perfetto/trace/ftrace/cpufreq_interactive_boost.proto";
import "perfetto/trace/ftrace/cpufreq_interactive_notyet.proto";
import "perfetto/trace/ftrace/cpufreq_interactive_setspeed.proto";
import "perfetto/trace/ftrace/cpufreq_interactive_target.proto";
import "perfetto/trace/ftrace/cpufreq_interactive_unboost.proto";
import "perfetto/trace/ftrace/ext4_da_write_begin.proto";
import "perfetto/trace/ftrace/ext4_da_write_end.proto";
import "perfetto/trace/ftrace/ext4_sync_file_enter.proto";
import "perfetto/trace/ftrace/ext4_sync_file_exit.proto";
import "perfetto/trace/ftrace/i2c_read.proto";
import "perfetto/trace/ftrace/i2c_reply.proto";
import "perfetto/trace/ftrace/i2c_result.proto";
import "perfetto/trace/ftrace/i2c_write.proto";
import "perfetto/trace/ftrace/lowmemory_kill.proto";
import "perfetto/trace/ftrace/mm_vmscan_direct_reclaim_begin.proto";
import "perfetto/trace/ftrace/mm_vmscan_direct_reclaim_end.proto";
import "perfetto/trace/ftrace/mm_vmscan_kswapd_wake.proto";
import "perfetto/trace/ftrace/mm_vmscan_kswapd_sleep.proto";
import "perfetto/trace/ftrace/print.proto";
import "perfetto/trace/ftrace/sched_blocked_reason.proto";
import "perfetto/trace/ftrace/sched_cpu_hotplug.proto";
import "perfetto/trace/ftrace/sched_switch.proto";
import "perfetto/trace/ftrace/sched_wakeup.proto";
import "perfetto/trace/ftrace/sched_waking.proto";
import "perfetto/trace/ftrace/smbus_read.proto";
import "perfetto/trace/ftrace/smbus_reply.proto";
import "perfetto/trace/ftrace/smbus_result.proto";
import "perfetto/trace/ftrace/smbus_write.proto";
import "perfetto/trace/ftrace/ipi_entry.proto";
import "perfetto/trace/ftrace/ipi_exit.proto";
import "perfetto/trace/ftrace/ipi_raise.proto";
import "perfetto/trace/ftrace/softirq_entry.proto";
import "perfetto/trace/ftrace/softirq_exit.proto";
import "perfetto/trace/ftrace/softirq_raise.proto";
import "perfetto/trace/ftrace/irq_handler_entry.proto";
import "perfetto/trace/ftrace/irq_handler_exit.proto";
import "perfetto/trace/ftrace/sync_pt.proto";
import "perfetto/trace/ftrace/sync_timeline.proto";
import "perfetto/trace/ftrace/sync_wait.proto";
import "perfetto/trace/ftrace/workqueue_activate_work.proto";
import "perfetto/trace/ftrace/workqueue_execute_end.proto";
import "perfetto/trace/ftrace/workqueue_execute_start.proto";
import "perfetto/trace/ftrace/workqueue_queue_work.proto";
import "perfetto/trace/ftrace/regulator_disable.proto";
import "perfetto/trace/ftrace/regulator_disable_complete.proto";
import "perfetto/trace/ftrace/regulator_enable.proto";
import "perfetto/trace/ftrace/regulator_enable_complete.proto";
import "perfetto/trace/ftrace/regulator_enable_delay.proto";
import "perfetto/trace/ftrace/regulator_set_voltage.proto";
import "perfetto/trace/ftrace/regulator_set_voltage_complete.proto";
import "perfetto/trace/ftrace/mdp_cmd_kickoff.proto";
import "perfetto/trace/ftrace/mdp_commit.proto";
import "perfetto/trace/ftrace/mdp_perf_set_ot.proto";
import "perfetto/trace/ftrace/mdp_sspp_change.proto";
import "perfetto/trace/ftrace/tracing_mark_write.proto";
import "perfetto/trace/ftrace/mdp_cmd_pingpong_done.proto";
import "perfetto/trace/ftrace/mdp_compare_bw.proto";
import "perfetto/trace/ftrace/mdp_perf_set_panic_luts.proto";
import "perfetto/trace/ftrace/mdp_sspp_set.proto";
import "perfetto/trace/ftrace/mdp_cmd_readptr_done.proto";
import "perfetto/trace/ftrace/mdp_misr_crc.proto";
import "perfetto/trace/ftrace/mdp_perf_set_qos_luts.proto";
import "perfetto/trace/ftrace/mdp_trace_counter.proto";
import "perfetto/trace/ftrace/mdp_cmd_release_bw.proto";
import "perfetto/trace/ftrace/mdp_mixer_update.proto";
import "perfetto/trace/ftrace/mdp_perf_set_wm_levels.proto";
import "perfetto/trace/ftrace/mdp_video_underrun_done.proto";
import "perfetto/trace/ftrace/mdp_cmd_wait_pingpong.proto";
import "perfetto/trace/ftrace/mdp_perf_prefill_calc.proto";
import "perfetto/trace/ftrace/mdp_perf_update_bus.proto";
import "perfetto/trace/ftrace/rotator_bw_ao_as_context.proto";
import "perfetto/trace/ftrace/mm_filemap_add_to_page_cache.proto";
import "perfetto/trace/ftrace/mm_filemap_delete_from_page_cache.proto";

package perfetto.protos;

message FtraceEvent {
  // Nanoseconds since an epoch.
  // Epoch is configurable by writing into trace_clock.
  // By default this timestamp is CPU local.
  // TODO: Figure out a story for reconciling the various clocks.
  optional uint64 timestamp = 1;

  optional uint32 pid = 2;

  oneof event {
    PrintFtraceEvent print = 3;
    SchedSwitchFtraceEvent sched_switch = 4;
    SchedWakeupFtraceEvent sched_wakeup = 17;
    CpufreqInteractiveAlreadyFtraceEvent cpu_freq_interactive_already = 5;
    CpufreqInteractiveBoostFtraceEvent cpu_freq_interactive_boost = 6;
    CpufreqInteractiveNotyetFtraceEvent cpu_freq_interactive_notyet = 7;
    CpufreqInteractiveSetspeedFtraceEvent cpu_freq_interactive_setspeed = 8;
    CpufreqInteractiveTargetFtraceEvent cpu_freq_interactive_target = 9;
    CpufreqInteractiveUnboostFtraceEvent cpu_freq_interactive_unboost = 10;
    CpuFrequencyFtraceEvent cpu_frequency = 11;
    CpuFrequencyLimitsFtraceEvent cpu_frequency_limits = 12;
    CpuIdleFtraceEvent cpu_idle = 13;
    ClockEnableFtraceEvent clock_enable = 14;
    ClockDisableFtraceEvent clock_disable = 15;
    ClockSetRateFtraceEvent clock_set_rate = 16;
    SchedBlockedReasonFtraceEvent sched_blocked_reason = 18;
    SchedCpuHotplugFtraceEvent sched_cpu_hotplug = 19;
    SchedWakingFtraceEvent sched_waking = 20;
    IpiEntryFtraceEvent ipi_entry = 21;
    IpiExitFtraceEvent ipi_exit = 22;
    IpiRaiseFtraceEvent ipi_raise = 23;
    SoftirqEntryFtraceEvent softirq_entry = 24;
    SoftirqExitFtraceEvent softirq_exit = 25;
    SoftirqRaiseFtraceEvent softirq_raise = 26;
    I2cReadFtraceEvent i2c_read = 27;
    I2cWriteFtraceEvent i2c_write = 28;
    I2cResultFtraceEvent i2c_result = 29;
    I2cReplyFtraceEvent i2c_reply = 30;
    SmbusReadFtraceEvent smbus_read = 31;
    SmbusWriteFtraceEvent smbus_write = 32;
    SmbusResultFtraceEvent smbus_result = 33;
    SmbusReplyFtraceEvent smbus_reply = 34;
    LowmemoryKillFtraceEvent lowmemory_kill = 35;
    IrqHandlerEntryFtraceEvent irq_handler_entry = 36;
    IrqHandlerExitFtraceEvent irq_handler_exit = 37;
    SyncPtFtraceEvent sync_pt = 38;
    SyncTimelineFtraceEvent sync_timeline = 39;
    SyncWaitFtraceEvent sync_wait = 40;
    Ext4DaWriteBeginFtraceEvent ext4_da_write_begin = 41;
    Ext4DaWriteEndFtraceEvent ext4_da_write_end = 42;
    Ext4SyncFileEnterFtraceEvent ext4_sync_file_enter = 43;
    Ext4SyncFileExitFtraceEvent ext4_sync_file_exit = 44;
    BlockRqIssueFtraceEvent block_rq_issue = 45;
    MmVmscanDirectReclaimBeginFtraceEvent mm_vmscan_direct_reclaim_begin = 46;
    MmVmscanDirectReclaimEndFtraceEvent mm_vmscan_direct_reclaim_end = 47;
    MmVmscanKswapdWakeFtraceEvent mm_vmscan_kswapd_wake = 48;
    MmVmscanKswapdSleepFtraceEvent mm_vmscan_kswapd_sleep = 49;
    BinderTransactionFtraceEvent binder_transaction = 50;
    BinderTransactionReceivedFtraceEvent binder_transaction_received = 51;
    BinderSetPriorityFtraceEvent binder_set_priority = 52;
    BinderLockFtraceEvent binder_lock = 53;
    BinderLockedFtraceEvent binder_locked = 54;
    BinderUnlockFtraceEvent binder_unlock = 55;
    WorkqueueActivateWorkFtraceEvent workqueue_activate_work = 56;
    WorkqueueExecuteEndFtraceEvent workqueue_execute_end = 57;
    WorkqueueExecuteStartFtraceEvent workqueue_execute_start = 58;
    WorkqueueQueueWorkFtraceEvent workqueue_queue_work = 59;
    RegulatorDisableFtraceEvent regulator_disable = 60;
    RegulatorDisableCompleteFtraceEvent regulator_disable_complete = 61;
    RegulatorEnableFtraceEvent regulator_enable = 62;
    RegulatorEnableCompleteFtraceEvent regulator_enable_complete = 63;
    RegulatorEnableDelayFtraceEvent regulator_enable_delay = 64;
    RegulatorSetVoltageFtraceEvent regulator_set_voltage = 65;
    RegulatorSetVoltageCompleteFtraceEvent regulator_set_voltage_complete = 66;
    CgroupAttachTaskFtraceEvent cgroup_attach_task = 67;
    CgroupMkdirFtraceEvent cgroup_mkdir = 68;
    CgroupRemountFtraceEvent cgroup_remount = 69;
    CgroupRmdirFtraceEvent cgroup_rmdir = 70;
    CgroupTransferTasksFtraceEvent cgroup_transfer_tasks = 71;
    CgroupDestroyRootFtraceEvent cgroup_destroy_root = 72;
    CgroupReleaseFtraceEvent cgroup_release = 73;
    CgroupRenameFtraceEvent cgroup_rename = 74;
    CgroupSetupRootFtraceEvent cgroup_setup_root = 75;
    MdpCmdKickoffFtraceEvent mdp_cmd_kickoff = 76;
    MdpCommitFtraceEvent mdp_commit = 77;
    MdpPerfSetOtFtraceEvent mdp_perf_set_ot = 78;
    MdpSsppChangeFtraceEvent mdp_sspp_change = 79;
    TracingMarkWriteFtraceEvent tracing_mark_write = 80;
    MdpCmdPingpongDoneFtraceEvent mdp_cmd_pingpong_done = 81;
    MdpCompareBwFtraceEvent mdp_compare_bw = 82;
    MdpPerfSetPanicLutsFtraceEvent mdp_perf_set_panic_luts = 83;
    MdpSsppSetFtraceEvent mdp_sspp_set = 84;
    MdpCmdReadptrDoneFtraceEvent mdp_cmd_readptr_done = 85;
    MdpMisrCrcFtraceEvent mdp_misr_crc = 86;
    MdpPerfSetQosLutsFtraceEvent mdp_perf_set_qos_luts = 87;
    MdpTraceCounterFtraceEvent mdp_trace_counter = 88;
    MdpCmdReleaseBwFtraceEvent mdp_cmd_release_bw = 89;
    MdpMixerUpdateFtraceEvent mdp_mixer_update = 90;
    MdpPerfSetWmLevelsFtraceEvent mdp_perf_set_wm_levels = 91;
    MdpVideoUnderrunDoneFtraceEvent mdp_video_underrun_done = 92;
    MdpCmdWaitPingpongFtraceEvent mdp_cmd_wait_pingpong = 93;
    MdpPerfPrefillCalcFtraceEvent mdp_perf_prefill_calc = 94;
    MdpPerfUpdateBusFtraceEvent mdp_perf_update_bus = 95;
    RotatorBwAoAsContextFtraceEvent rotator_bw_ao_as_context = 96;
    MmFilemapAddToPageCacheFtraceEvent mm_filemap_add_to_page_cache = 97;
    MmFilemapDeleteFromPageCacheFtraceEvent mm_filemap_delete_from_page_cache =
        98;
  }
}
